2007-09-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/props-proj.c (prop_dialog_new): changed the section name for
	the properties dialog.

	* doc/C/gnotime.xml: Added information about the properties dialog
	and started to restructure the manual

2007-09-13  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: fixed some typos and reviewed the text for
	sections 1 to 3.

	* src/export.c (export_err, export_really): Use gtk_message_dialog
	instead of the deprecated gnome_error_dialog
	(export_file_picker): Use GtkFileChooser instead of the deprecated
	GtkFileSelection
	(export_show_error_message): created utility function to display
	error messages in the export module

2007-09-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Update the manual up to the Customization
	section.

2007-09-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/*.po*: Update message template files with some missing
	strings.

	* po/pt_BR.po: Fixed some Brazilian Portuguese translations.

2007-09-06  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/pt_BR.po: Update Brazilian Portuguese translation.
	
	* po/*.po: Updated with new messages.

	* glade/plugin_editor.glade: Fixed some typos.

	* po/gnotime-2.0.pot: Update template file.

	* po/Makefile.in.in: Added.


2007-09-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_latest_str_scm)
	(task_get_earliest_str_scm): Display "No activity" instead of
	"01/01/1970" when the task has no time intervals recorded.

	* configure.in: Updated version number to 2.2.3

2007-09-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c (on_save_clicked_cb): Use GtkFileChooserDialog for
	the file selection. This simplifies the code and also fixes the
	problem of a hidden question dialog when overwriting file, as
	reported in the Debian Bug Tracking System at
	http://bugs.debian.org/422023 .
	(task_paste_clicked_cb): Don't use gtt_task_copy when pasting the