@@ -1,3 +1,7 @@
+2007-09-17  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/menus.c: Renamed the Edit menu to Projects
+
 2007-09-15  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* src/props-proj.c (prop_dialog_new): changed the section name for
